--- a/react-basic/package.json
+++ b/react-basic/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "immutable": "^3.8.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
