--- a/react-redux-middleware/package.json
+++ b/react-redux-middleware/package.json
@@ -10,6 +10,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
