--- a/react-router/package.json
+++ b/react-router/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -38,7 +39,12 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-server": "^4.2.3",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.3.0",
+    "redux-pender": "^1.1.15",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -49,11 +55,14 @@
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src node scripts/start.js",
+    "start:server": "node server",
     "build": "cross-env NODE_PATH=src node scripts/build.js",
+    "build:server": "cross-env NODE_PATH=src node scripts/build.server.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "cross-env": "^5.1.4"
+    "cross-env": "^5.1.4",
+    "ignore-loader": "^0.1.2"
   },
   "jest": {
     "collectCoverageFrom": [
