--- a/react-router-seo/package.json
+++ b/react-router-seo/package.json
@@ -34,17 +34,19 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "query-string": "^6.0.0",
+    "query-string": "5",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-server": "^4.2.3",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-pender": "^1.1.15",
+    "serialize-javascript": "^1.4.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
